unpackaged/objects/Episode__c.object
<CustomObject>
    <description>Used for individual Episodes of TV shows</description>
    <fields>
        <fullName>Episode_Number__c</fullName>
        <label>Episode Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Season__c</fullName>
        <label>Season</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TV_Show__c</fullName>
        <label>TV Show</label>
        <referenceTo>Production__c</referenceTo>
        <relationshipLabel>Episodes</relationshipLabel>
        <relationshipName>Episodes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Episode</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Episode Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Episodes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>